vlib/v/checker/tests/var_option_index_error.vv
fn main() {
	mut var4 := ?map[string]string{}
	var4?['a'] = 'b'
	var4['b'] = 'c'
}
